logs/Slang/chapter-6/6.20.5--specparam.sv.log
name: specparam
description: specparam tests
should_fail: 0
tags: 6.20.5
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.20.5--specparam.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.20.5--specparam.sv:8:2: error: expected member
	specparam delay = 50;
	^~~~~~~~~
